src/tests/function-declarations/17.txt
function-declarations/17.c:2:5: warning: 'return' with a value, in function returning void
     return a;
     ^
function-declarations/17.c:22:5: error: incompatible conversion returning 'char' from a function with return type 'char *'
     return 'h';
     ^
